--- a/forecast.io-redir/index.html
+++ b/forecast.io-redir/index.html
@@ -13,6 +13,7 @@
     function showlocation(){navigator.geolocation.getCurrentPosition(callback);}
     function callback(position){window.location = "http://forecast.io/#/f/" + position.coords.latitude + "," + position.coords.longitude;}
       showlocation()
+    	setTimeout("location.reload(true);",3000);
   </script>
 </body>
 </html>
